show worldmodel if pm_modelview is set

--- a/.gitignore
+++ b/.gitignore
@@ -361,6 +361,12 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
+# ----------------------------------------
+
+preyconfig.cfg
+
+gamex86.*
+
 src/DebugDLL/
 src/game/DebugDLL/
 src/idLib/DebugDLL/
